<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.CategoryFragment">
    <data>
        <variable
            name="viewModel"
            type="kr.co.teamfresh.ssh.dawnmarket.presentation.viewmodel.CategoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/logintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/로그인해주세요"
            style="@style/font17B"
            android:clickable="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/alarm_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_bell_big"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_badge_new"
                android:text="@string/N"
                style="@style/badge"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:id="@+id/setting_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_setting"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        tools:listitem="@layout/category_list_item"
        android:orientation="vertical"
        app:spanCount="4"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/Gray_50"
        app:layout_constraintTop_toBottomOf="@id/category_list"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/event_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/기획전_이벤트"
        style="@style/font13B"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spanCount="5"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        tools:listitem="@layout/event_list_item"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_txt"/>

</androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
    </LinearLayout>
</layout>